@@ -127,6 +127,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #16469: Fix exceptions from float -> Fraction and Decimal -> Fraction
+  conversions for special values to be consistent with those for float -> int
+  and Decimal -> int.  Patch by Alexey Kachayev.
+
 - Issue #16481: multiprocessing no longer leaks process handles on Windows.
 
 - Issue #12428: Add a pure Python implementation of functools.partial().
